[gd_scene load_steps=38 format=3 uid="uid://d0nxfiiq1vyy7"]

[ext_resource type="Script" path="res://player/scripts/bullet.gd" id="1_r1nai"]
[ext_resource type="Texture2D" uid="uid://beotm7151dwxr" path="res://player/bullets/vfxBullet/destroy/bulletP1.png" id="2_7kyvf"]
[ext_resource type="Texture2D" uid="uid://ie0kygwr36bb" path="res://player/bullets/vfxBullet/move/bulletP1.png" id="2_lppwl"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ucn5y"]
radius = 22.0
height = 202.0

[sub_resource type="AtlasTexture" id="AtlasTexture_uj01y"]
atlas = ExtResource("2_7kyvf")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j1cp"]
atlas = ExtResource("2_7kyvf")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehtwc"]
atlas = ExtResource("2_7kyvf")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtvhv"]
atlas = ExtResource("2_7kyvf")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pom8"]
atlas = ExtResource("2_7kyvf")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6gsm"]
atlas = ExtResource("2_7kyvf")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_yphqv"]
atlas = ExtResource("2_7kyvf")
region = Rect2(0, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcyrg"]
atlas = ExtResource("2_7kyvf")
region = Rect2(256, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_xst4j"]
atlas = ExtResource("2_lppwl")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_llc4f"]
atlas = ExtResource("2_lppwl")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdcby"]
atlas = ExtResource("2_lppwl")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlmm7"]
atlas = ExtResource("2_lppwl")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nuy8c"]
atlas = ExtResource("2_lppwl")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_simog"]
atlas = ExtResource("2_lppwl")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7nji"]
atlas = ExtResource("2_lppwl")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sdfp"]
atlas = ExtResource("2_lppwl")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_00nom"]
atlas = ExtResource("2_lppwl")
region = Rect2(768, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_76y0d"]
atlas = ExtResource("2_lppwl")
region = Rect2(1024, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7215"]
atlas = ExtResource("2_lppwl")
region = Rect2(0, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3afl"]
atlas = ExtResource("2_lppwl")
region = Rect2(256, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gmi4"]
atlas = ExtResource("2_lppwl")
region = Rect2(512, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_68plo"]
atlas = ExtResource("2_lppwl")
region = Rect2(768, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_muh8c"]
atlas = ExtResource("2_lppwl")
region = Rect2(1024, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uaty"]
atlas = ExtResource("2_lppwl")
region = Rect2(0, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyud6"]
atlas = ExtResource("2_lppwl")
region = Rect2(256, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_1s0qw"]
atlas = ExtResource("2_lppwl")
region = Rect2(512, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4uds"]
atlas = ExtResource("2_lppwl")
region = Rect2(768, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fljj"]
atlas = ExtResource("2_lppwl")
region = Rect2(1024, 768, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0kko"]
atlas = ExtResource("2_lppwl")
region = Rect2(0, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnnpd"]
atlas = ExtResource("2_lppwl")
region = Rect2(256, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdqj6"]
atlas = ExtResource("2_lppwl")
region = Rect2(512, 1024, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvtiy"]
atlas = ExtResource("2_lppwl")
region = Rect2(768, 1024, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_6l3tb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uj01y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j1cp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehtwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtvhv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pom8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6gsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yphqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcyrg")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"destroy",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xst4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llc4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdcby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlmm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nuy8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_simog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7nji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sdfp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00nom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76y0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7215")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3afl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gmi4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68plo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muh8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uaty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyud6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1s0qw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4uds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fljj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0kko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnnpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdqj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvtiy")
}],
"loop": true,
"name": &"move",
"speed": 24.0
}]

[node name="bullet" type="Area2D" groups=["bulletPlayer"]]
script = ExtResource("1_r1nai")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, -1)
rotation = 1.5708
scale = Vector2(0.6, 0.6)
shape = SubResource("CapsuleShape2D_ucn5y")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-5.5, -2.5)
scale = Vector2(7.55, 4.05)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_6l3tb")
animation = &"destroy"
offset = Vector2(7, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
